--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>apiSetup</artifactId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>apiSetup</name>
-	<description>Demo project for Spring Boot</description>
+	<name>GetYourWay Backend</name>
+	<description>Backend API interface for the GetYourWay.com flight booking website.</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
