--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
@@ -22,12 +23,24 @@
     "firebase": "^10.1.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
+    "rc-slider": "^10.2.1",
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "eslint-plugin-jest-dom": "^5.0.2",
+    "eslint-plugin-testing-library": "^6.0.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
