--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-testing-library": "^6.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "next-router-mock": "^0.9.9",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
