--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>Json-Gson</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
