--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
+    "@stripe/stripe-js": "^2.0.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-datepicker": "^4.15.0",
@@ -21,7 +22,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "firebase": "^10.1.0",
-    "next": "13.4.10",
+    "next": "^13.4.10",
     "postcss": "8.4.26",
     "rc-slider": "^10.2.1",
     "react": "18.2.0",
@@ -30,6 +31,7 @@
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
+    "stripe": "^12.18.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
