--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
+    "react-test-renderer": "^18.2.0",
     "stripe": "^12.18.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
